--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>What is the capital of India?</h2>
+    <input type="radio" name="city" id="new-delhi">
+    <label for="new-delhi">New Delhi</label>
+    <br>
+    <input type="radio" name="city" id="mumbai">
+    <label for="mumbai">Mumbai</label>
+    <a href="https://en.wikipedia.org/wiki/New_Delhi">
+        <blockquote>
+            New Delhi is the capital of India and an administrative district of NCT Delhi.
+        </blockquote>
+    </a>
     <script type="text/javascript" src="./script.js">
 </script>
 
