--- a/main.html
+++ b/main.html
@@ -14,11 +14,9 @@
     <br>
     <input type="radio" name="city" id="mumbai">
     <label for="mumbai">Mumbai</label>
-    <a href="https://en.wikipedia.org/wiki/New_Delhi">
-        <blockquote>
-            New Delhi is the capital of India and an administrative district of NCT Delhi.
-        </blockquote>
-    </a>
+    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+        New Delhi is the capital of India and an administrative district of NCT Delhi.
+    </blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
